@@ -3,6 +3,8 @@
 	lib/rubygems/remote_installer.rb,lib/rubygems/gem_commands.rb: 
 	Fixes to make non-root installation work properly.  Still need to
 	fix uninstallation.
+	* lib/rubygems/gem_commands.rb: Allow multiple gems/gem names on the
+	command line for install.
 
 2004-10-31  Chad Fowler <chad@chadfowler.com>
 	* lib/rubygems/version.rb,test/test_version_comparison.rb: Patrick May's
